2013-11-11 Raphael Neider <rneider AT web.de>

	* src/pic14/main.c,
	  src/pic14/main.h,
	  src/pic16/device.h,
	  src/pic16/main.c:
	  add warning if --use-non-free is *not* given while compiling
	  for PIC14 or PIC16 devices; the warning can be disabled by
	  either passing --use-non-free (usually recommended) or
	  by passing --no-warn-non-free (usually not recommended)

	* device/lib/pic14/Makefile.common,
	  device/lib/pic16/Makefile.common,
	  device/non-free/lib/pic14/Makefile.common.in,
	  device/non-free/lib/pic16/Makefile.common,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk:
	  pass --no-warn-non-free to avoid new warnings

	* device/lib/pic14/Makefile.in,
	  device/lib/pic14/aclocal.m4,
	  device/lib/pic14/configure,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.in,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/non-free/lib/pic16/Makefile.in,
	  device/non-free/lib/pic16/aclocal.m4,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/libdev/Makefile.in:
	  regenerated

2013-09-30 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tlcs90/stubs.s,
	  device/lib/tlcs90/Makefile.in:
	  TLCS-90 library.

2013-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/asm/tlcs90,
	  device/include/math.h,
	  device/include/sdcc-lib.h,
	  device/include/stdarg.h,
	  device/lib/tlcs90/Makefile.in,
	  device/lib/tlcs90/divmixed.s,
	  device/lib/tlcs90/modmixed.s,
	  src/z80/gen.c:
	  TLCS-90 library.

2013-09-28 Philipp Klaus Krause <pkk AT spth.de>
